--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <body>
     <h1>Hello World!</h1>
-    <p>The world is a vast and intricate tapestry of diverse cultures, ecosystems, and interconnected lives. It encompasses the majestic beauty of our planet Earth, with its breathtaking landscapes, from towering mountains to shimmering oceans. This global stage hosts a kaleidoscope of languages, traditions, and beliefs, reflecting the rich mosaic of human civilization. Beyond our terrestrial borders, it extends into the cosmos, where galaxies and stars dance in the endless expanse of the universe. The world is a testament to the human spirit's capacity for innovation, exploration, and collaboration, as we strive to understand our surroundings, forge connections, and shape the course of our shared destiny. It is a realm of boundless wonder and discovery, inviting us to explore its myriad facets and embrace the unity that binds us all.</p>
+    <strong> What is the world we live in</strong>
     
+    <p>The world is a vast and intricate tapestry of diverse cultures, ecosystems, and interconnected lives. It encompasses the majestic beauty of our planet Earth, with its breathtaking landscapes, from towering mountains to shimmering oceans. This global stage hosts a kaleidoscope of languages, traditions, and beliefs, reflecting the rich mosaic of human civilization. Beyond our terrestrial borders, it extends into the cosmos, where galaxies and stars dance in the endless expanse of the universe. The world is a testament to the human spirit's capacity for innovation, exploration, and collaboration, as we strive to understand our surroundings, forge connections, and shape the course of our shared destiny. It is a realm of boundless wonder and discovery, inviting us to explore its myriad facets and embrace the unity that binds us all.</p>
+
   </body>
 </html>
