--- a/index.html
+++ b/index.html
@@ -11,7 +11,56 @@
     
     <p>The world is a vast and intricate tapestry of diverse cultures, ecosystems, and interconnected lives. It encompasses the majestic beauty of our planet Earth, with its breathtaking landscapes, from towering mountains to shimmering oceans. This global stage hosts a kaleidoscope of languages, traditions, and beliefs, reflecting the rich mosaic of human civilization. Beyond our terrestrial borders, it extends into the cosmos, where galaxies and stars dance in the endless expanse of the universe. The world is a testament to the human spirit's capacity for innovation, exploration, and collaboration, as we strive to understand our surroundings, forge connections, and shape the course of our shared destiny. It is a realm of boundless wonder and discovery, inviting us to explore its myriad facets and embrace the unity that binds us all.</p>
 
-  </body>
+ <p>Unordered list</p>
+ <!-- Creating list without order/numbering -->
+<ul>
+  <li> Creation 1 </li>
+  <li> Creation 2 </li>
+  <li> Creation 3 </li>
+</ul>
+
+ <p>Ordered lists</p>
+ <!-- Creating list with order/numbering -->
+<ol>
+  <li> Update 1 </li>
+  <li> Update 2 </li>
+  <li> Update 3 </li>
+</ol>
+
+<!-- Link and images -->
+
+<h2>About Odin Project</h2>
+
+<a>Click</a> 
+<!-- Anchor tag need link using (<a href="weblink">Button</a>) -->
+<a href="https://www.theodinproject.com/about">here</a>
+
+<p>Opening using next tab</p>
+<a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">click here</a>
+<!-- (target = Where the link will be open) 
+     (rel = used to describe ralation between the link and current page.)
+     
+     "Security added behaviour below"
+
+     (noopener = prevents link access with current page)
+     (noreferrer = prevents the link to know current page) -->
+
+<!-- How to use relative link -->
+
+<h1>What is Odin Project</h1>
+
+	<a href="about.html">About Odin</a>
+<!-- Relative link works when its in the same directory -->
+<!-- If the link is on different directory use prepending "./" -->
+
+<!-- how to put images -->
+<img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo" height="310" width="310">
+<!-- Prepending "./" is used if the image is in directory -->
+<!-- "../" is used to access image of parent directory -->
+<!-- "alt=" is use to describe the image -->
+<!-- adding size attribute helps the browser layout the page -->
+
+    </body>
   <!---Adding comment example-->
 
 </html>
